--- a/WebHDFS.Kitty/WebHDFS.Kitty.csproj
+++ b/WebHDFS.Kitty/WebHDFS.Kitty.csproj
@@ -2,6 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <!--<AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionSuffix>beta</VersionSuffix>-->
+    <Description>Pure .NET library to work with WebHDFS</Description>
+    <Summary>Pure .NET library to work with WebHDFS</Summary>
+    <Authors>Vadim Galaktionov</Authors>
+    <Product>WebHDFS.Kitty</Product>
+    <Title>WebHDFS.Kitty</Title>
+    <PackageId>WebHDFS.Kitty</PackageId>
+    <PackageTags>apache hadoop hdfs dotnet core net c# windows linux macos ios android xboxone xbox</PackageTags>
+    <PackageProjectUrl>https://github.com/galakt/WebHDFS.Kitty</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
