--- a/WebHDFS.Kitty/WebHDFS.Kitty.csproj
+++ b/WebHDFS.Kitty/WebHDFS.Kitty.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <!--<AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
-    <VersionPrefix>1.0.0</VersionPrefix>
-    <VersionSuffix>beta</VersionSuffix>-->
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.5</FileVersion>
+    <!--<VersionPrefix>1.0.0</VersionPrefix>-->
+    <!--<VersionSuffix>beta</VersionSuffix>-->
     <Description>Pure .NET library to work with WebHDFS</Description>
     <Summary>Pure .NET library to work with WebHDFS</Summary>
     <Authors>Vadim Galaktionov</Authors>
