--- a/WebHDFS.Kitty/WebHDFS.Kitty.csproj
+++ b/WebHDFS.Kitty/WebHDFS.Kitty.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.5</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.5</FileVersion>
     <!--<VersionPrefix>1.0.0</VersionPrefix>-->
