Copy Always for txt file

--- a/WebHDFS.Kitty.IntegrationTests/WebHDFS.Kitty.IntegrationTests.csproj
+++ b/WebHDFS.Kitty.IntegrationTests/WebHDFS.Kitty.IntegrationTests.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\WebHDFS.Kitty\WebHDFS.Kitty.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Samples\SampleTextFile.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
